# bosch-thermostat-client-python

./: .gitignore  .pdm.toml  MANIFEST.in  README.md  env.example  example.py  example_nefit.py  example_nefit_local.py  example_nefit_tc200v2.py  example_sim.py  example_xmpp.py  pyproject.toml  rawscan_618911645.json  rawscan_753412880.json  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yaml
bosch_thermostat_client/: __init__.py  bosch_cli.py  bosch_examples.py  bosch_rawscan_cli.py  easycontrol_ca.pem  exceptions.py  helper.py  schedule.py  sensors.py  version.py
bosch_thermostat_client/circuits/: __init__.py  circuit.py  circuits.py  easycontrol_circuit.py  ivt_circuit.py  nefit_circuit.py  operation_mode.py
bosch_thermostat_client/circuits/easycontrol/: __init__.py  base.py  dhw.py  zone.py
bosch_thermostat_client/circuits/ivt/: __init__.py  base.py
bosch_thermostat_client/circuits/nefit/: __init__.py  base.py  heating.py
bosch_thermostat_client/connectors/: __init__.py  easycontrol.py  http.py  ivt.py  nefit.py  nefit2.py  nefitxmpp.py  xmpp.py
bosch_thermostat_client/const/: __init__.py  easycontrol.py  ivt.py  nefit.py
bosch_thermostat_client/db/: __init__.py  can.json  db_EASYCONTROL.json  db_IVT.json  db_IVT_MBLAN.json  db_NEFIT.json  default.json  errorcodes_easycontrol.json  errorcodes_ivt.json  errorcodes_nefit.json  nefit.json  nsc_icom_gateway.json  rc300.json  rc300_rc200.json
bosch_thermostat_client/db/can/: 010602.json  010701.json
bosch_thermostat_client/db/default/: 011003.json
bosch_thermostat_client/db/easycontrol/: 030401.json  030602.json  030603.json  030605.json  030801.json  031000.json  031200.json  031302.json  040000.json  040200.json  040201.json  040202.json  040203.json  050001.json  050200.json
bosch_thermostat_client/db/mblan/: 011003.json
bosch_thermostat_client/db/nefit/: 021802.json  021901.json  022100.json  (+1 more)
bosch_thermostat_client/encryption/: __init__.py  base.py  base_encryption.py  easycontrol.py  easycontrol_encryption.py  ivt.py  ivt_encryption.py  nefit.py  nefit_encryption.py
bosch_thermostat_client/gateway/: __init__.py  base.py  base_gateway.py  easycontrol.py  easycontrol_gateway.py  ivt.py  ivt_gateway.py  nefit.py  nefit_gateway.py
bosch_thermostat_client/helpers/: base_class_choosers.py
bosch_thermostat_client/operation_mode/: __init__.py  base.py  easycontrol.py  nefit_dhw.py
bosch_thermostat_client/schedule/: __init__.py  easycontrol_programs.py  ivt_schedule.py
bosch_thermostat_client/sensors/: __init__.py  crawl.py  ecus_recording.py  energy.py  notification.py  notification_easycontrol.py  notification_ivt.py  notification_nefit.py  recording.py  sensor.py  sensors.py
bosch_thermostat_client/switches/: __init__.py  boolean.py  number.py  select.py  switch.py
bosch_thermostat_http/: const.py  encryption.py  gateway.py
bosch_thermostat_http/connectors/: http.py  ivt.py  nefit.py  xmpp.py
bosch_thermostat_http/db/: db.json
examples/: example.py  example2.py  example4.py  exampleSuWi.py  example_ka.py  example_test.py  rawscan.py
tests/: gateway_test_server.py  test_aes.py  test_gateway.py  test_http_connector.py  test_ivt.py  test_ivt_xmpp.py  test_nefit.py  test_nefit_ox.py
(+14 files in other folders)
