[project]
name = "bosch-thermostat-client-python"
dynamic = ["version"]
description = "Python API for talking to Bosch™ Heating gateway using HTTP or XMPP"
authors = [
    {name = "Pawel Szafer", email = "pszafer@gmail.com"},
]
dependencies = [
    "aioxmpp>=0.13.3",
    "aiohttp>=3.8.4",
    "click>=8.1.3",
    "colorlog>=6.7.0",
    "pyaes>=1.6.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
version = {from = "bosch_thermostat_client/version.py"}

[project.scripts]
bosch_cli= "bosch_thermostat_client.bosch_cli:cli"
