[project]
name = "bosch-thermostat-client"
dynamic = ["version"]
description = "Python API for talking to Bosch™ Heating gateway using HTTP or XMPP"
authors = [
    {name = "Pawel Szafer", email = "pszafer@gmail.com"},
]
dependencies = [
    "aiohttp>=3.9.0",
    "click>=8.1.7",
    "colorlog>=6.8.2",
    "pyaes>=1.6.1",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
    "slixmpp>=1.8.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache License 2.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
version = {from = "bosch_thermostat_client/version.py"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "pre-commit>=3.2.1",
]

[project.scripts]
bosch_cli= "bosch_thermostat_client.bosch_cli:cli"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pdm/_vendor
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["bosch_thermostat_client"]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
